WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139667
Incorrect order of arguments in initial-letter property
https://bugs.webkit.org/show_bug.cgi?id=139667
Summary
Incorrect order of arguments in initial-letter property
Dave Cramer
Reported
2014-12-15 20:01:00 PST
The order of arguments in the implementation of the initial-letter property does not match the current spec (
http://dev.w3.org/csswg/css-inline/#sizing-drop-initials
). The first argument should be size, and the second argument should be the number of lines that the initial letter sinks. This was incorrect in earlier versions of the editor's draft, due to an error by said editor. For example, p::first-letter { -webkit-initial-letter: 3 1 } should produce a pure "raised cap," the size of a 3-line drop cap but sitting on the first text baseline.
Attachments
fix.patch
(6.55 KB, patch)
2015-02-10 16:39 PST
,
Sylvain Galineau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sylvain Galineau
Comment 1
2015-02-10 16:39:45 PST
Created
attachment 246350
[details]
fix.patch Swapped the arguments in CSSParser.cpp. Updated the layout tests.
Darin Adler
Comment 2
2015-02-11 08:32:12 PST
Comment on
attachment 246350
[details]
fix.patch I think we shipped this in multiple web browser versions. Maybe we should swap the order only when removing the WebKit prefix and keep the backwards version for a while with the vendor prefix?
Jon Lee
Comment 3
2015-02-11 09:23:23 PST
(In reply to
comment #2
)
> Comment on
attachment 246350
[details]
> fix.patch > > I think we shipped this in multiple web browser versions. Maybe we should > swap the order only when removing the WebKit prefix and keep the backwards > version for a while with the vendor prefix?
We haven't shipped this. You might be confusing this with first-letter (see 136484).
Sylvain Galineau
Comment 4
2015-03-02 13:15:54 PST
Any additional work needed to land this patch?
Radar WebKit Bug Importer
Comment 5
2015-06-16 10:58:14 PDT
<
rdar://problem/21404945
>
WebKit Commit Bot
Comment 6
2015-06-16 10:58:59 PDT
Comment on
attachment 246350
[details]
fix.patch Clearing flags on attachment: 246350 Committed
r185595
: <
http://trac.webkit.org/changeset/185595
>
WebKit Commit Bot
Comment 7
2015-06-16 10:59:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug