Incorrect order of arguments in initial-letter property https://bugs.webkit.org/show_bug.cgi?id=139667

Patch by sylvain-galineau <galineau@adobe.com> on 2015-06-16
Reviewed by Sam Weinig.

Source/WebCore:

The CSS specification swapped the order of the initial-letters numeric values.
The drop cap's height now comes first, followed by its optional vertical position.
See http://www.w3.org/TR/css-inline/#sizing-drop-initials.

No new tests. Existing tests updated.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue): swap arguments to reflect new spec order.

LayoutTests:

Update initial-letter tests to reflect the value's new ordering, per CSS Inline Layout module.

* fast/css-generated-content/initial-letter-border-padding.html:
* fast/css-generated-content/initial-letter-clearance.html:
* fast/css-generated-content/initial-letter-descender.html:
* fast/css-generated-content/initial-letter-raised.html:
* fast/css-generated-content/initial-letter-sunken.html:

Canonical link: https://commits.webkit.org/164055@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185595 268f45cc-cd09-0410-ab3c-d52691b4dbfc